--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,7 @@ li {
 }
 
 .hero-button {
+  font-family: Roboto, sans-serif;
   font-weight: 500;
   color: var(--light-background-color);
   background-color: var(--primary-brand-color);
