--- a/css/styles.css
+++ b/css/styles.css
@@ -204,6 +204,9 @@ logo-text-second-section {
   background-color: var(--light-background-color);
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .hero-text {
