--- a/css/styles.css
+++ b/css/styles.css
@@ -237,6 +237,7 @@ logo-text-second-section {
 }
 
 .filter-button {
+  display: block;
   font-family: Roboto, sans-serif;
   font-weight: 500;
   color: var(--primary-brand-color);
@@ -244,7 +245,7 @@ logo-text-second-section {
   cursor: pointer;
   padding: 12px 24px 12px 24px;
   margin-left: 24px;
-  border-color: var(--accent-color);
+  border: 1px solid var(--accent-color);
   border-radius: 4px;
 }
 
