--- a/css/styles.css
+++ b/css/styles.css
@@ -253,7 +253,8 @@ logo-text-second-section {
   margin-left: 0;
 }
 
-.filter-button:hover {
+.filter-button:hover,
+.filter-button:focus {
   color: var(--light-background-color);
   background-color: var(--pressed-state-color);
 }
