--- a/css/styles.css
+++ b/css/styles.css
@@ -405,6 +405,7 @@ logo-text-second-section {
   font-weight: 700;
   font-size: 36px;
   text-align: center;
+  padding-top: 120px;
   margin-top: 120px;
   margin-bottom: 72px;
 }
