--- a/css/styles.css
+++ b/css/styles.css
@@ -109,12 +109,10 @@ li {
 }
 
 .header {
-  max-width: 1158px;
-  padding-right: 15px;
-  padding-left: 15px;
   margin-left: auto;
   margin-right: auto;
   justify-content: baseline;
+  border-bottom: 1px solid var(--accent-color);
 }
 .header-container {
   display: flex;
@@ -249,13 +247,11 @@ logo-text-second-section {
   background-color: var(--light-main-color);
   cursor: pointer;
   padding: 12px 24px 12px 24px;
-  margin-left: 24px;
   border: 1px solid var(--accent-color);
   border-radius: 4px;
 }
-
-.filter-button:first-child {
-  margin-left: 0;
+.gallery-filter {
+  gap: 24px;
 }
 
 .filter-button:hover,
@@ -279,7 +275,7 @@ logo-text-second-section {
 }
 .section-with-light-wrapper {
   background-color: var(--light-main-color);
-  margin-top: 120px;
+  padding-top: 120px;
   padding-bottom: 120px;
 }
 
@@ -335,7 +331,7 @@ logo-text-second-section {
 .what-are-we-doing-list {
   display: flex;
   padding-right: 0;
-  padding-left: 0;
+  padding-left: 120px;
   margin-left: auto;
   margin-right: auto;
   justify-content: center;
@@ -388,7 +384,8 @@ logo-text-second-section {
   font-size: 36px;
   line-height: 1.1;
   text-align: center;
-  margin-top: 120px;
+  margin-bottom: 72px;
+  padding-top: 120px;
 }
 
 .footer-container {
@@ -405,8 +402,6 @@ logo-text-second-section {
   font-weight: 700;
   font-size: 36px;
   text-align: center;
-  padding-top: 120px;
-  margin-top: 120px;
   margin-bottom: 72px;
 }
 
